modified:   jogano.css modified:   jogano.js modified:   product/.DS_Store modified:   product/1.html new file:   product/10.html new file:   product/11.html new file:   product/13.html new file:   product/14.html new file:   product/18.html new file:   product/19.html renamed:    product/6.html -> product/2.html new file:   product/20.html new file:   product/21.html new file:   product/22.html new file:   product/23.html new file:   product/24.html new file:   product/29.html new file:   product/30.html new file:   product/31.html new file:   product/4.html new file:   product/47.html new file:   product/7.html new file:   product/8.html new file:   product/9.html modified:   products.html

--- a/product/2.html
+++ b/product/2.html
@@ -47,14 +47,14 @@
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
-<div class="dis-price">￥99</div>
-<div class="dis-p-name">Bachevillain
+<div class="dis-price">￥88</div>
+<div class="dis-p-name">LOST PARADISE 
 
 <div class="dis-alchol">13.0%</div>
 </div>
-<img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png">
+<img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/2-lostpara.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?id=574637858760&spm=a2141.7631565.banner_18738727711.1" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574638278788" class="dis-tobuy">Click to buy</a>
 
 
 
@@ -74,10 +74,10 @@
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-		Beef, Veal, Game (deer, venison), Poultry
+		Beef, Veal, 
 		<div class="dis-notes">
 	<h2>Notes</h2>
-A ruby color wine, with aromas of red fruits and vanilla. Smooth and sweet sensation, accompanied by vanilla ice cream and ripe red fruit. The body is tanned and soft. The aroma of French oak is slightly closed. Overall it is a traditional and feminine French wine. The taste is also food for entry-level wine lovers.
+This wine has a ruby color. The wine has aromas of red fruits The whole wine is soft and balanced, soft .it is a easy and simple taste for entry-level wine lovers to accept.
 <br><br><br><br>
 
 
