--- a/product/22.html
+++ b/product/22.html
@@ -1,19 +1,18 @@
 <!doctype html>
 <html>
-<head> <link href="product.css" type="text/css" rel="stylesheet"/>
+<head> <link href="jogano.css" type="text/css" rel="stylesheet"/>
 
  <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+<div class="navigationblock"></div>
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
     
 <a href="https://wangx733.github.io/jogano/home.html">
 <img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
 </a>
-
 	<div class="navigation">
 
       <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
@@ -48,37 +47,40 @@
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
-<div class="price">￥268</div>
-<div class="p-name">Chateau val de roc 2010
+<div class="dis-price">￥228</div>
+<div class="dis-p-name">Chateau Semonlon 
 
-<div class="alchol">13.5%</div>
+<div class="dis-alchol">13.0%</div>
 </div>
-<img class="photo" src="https://wangx733.github.io/jogano/1-products/6-valderoc.png">
+<img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/22-semonlon15.png">
 
-<div class="tobuy grey">Sold Out</div>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574528509895" class="dis-tobuy">Click to buy</a>
 
 
 
-<div class="grape">
-	<img class="icon" src="https://wangx733.github.io/jogano/icon-grape.png">
+<div class="dis-grape">
+	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-grape.png">
 	
-<div class="grapenum">
-70% <br>
-20% <br>
-10% 
+<div class="dis-grapenum">
+50% <br>
+50% <br>
+
 <br>
 	
-    <div class="region-description">
-    	<img class="icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Bordeaux</div>
+    <div class="dis-region-description">
+    	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
+        Avensan</div>
 <br>
 	
-	<div class="pair-description">
-		<img class="icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-		Beef, Lamb, Cheese, Baked vegetable
-		<div class="notes">
+	<div class="dis-pair-description">
+		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
+		Beef, Veal, 
+		<div class="dis-notes">
 	<h2>Notes</h2>
-Savory and a touch smoky, this wine boasts good structure and supple texture. A black fruit core of plums and raspberries, dappled with sweet spice, balance game meat notes on the long finish. Would pair well with slow roasted, garlic and herb lamb leg, or grilled cocoa-and-spice rubbed pork chops.
+Very soft, supple wine with some elegance and  nice aromas of strawberries and cherries.
+The soil of Margaux yields its finesse and elegance.
+ Already nice to drink and even better after 4 to 5 years cellaring.
+To drink with cooked dishes and red meat.
 <br><br><br><br>
 
 
@@ -87,10 +89,10 @@ Savory and a touch smoky, this wine boasts good structure and supple texture. A 
 	</div>
 </div>
 
-<div class="grapecompo">
+<div class="dis-grapecompo">
 	Merlot<br>
 Cabernet Sauvignon<br>
-Cabernet Franc</div>
+</div>
 </div>
 
 
