--- a/product/29.html
+++ b/product/29.html
@@ -47,14 +47,14 @@
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
-<div class="dis-price">￥99</div>
-<div class="dis-p-name">Bachevillain
+<div class="dis-price">￥388</div>
+<div class="dis-p-name">Domaine Pierre Amiot et fils Morey Saint Denis
 
-<div class="dis-alchol">13.0%</div>
+<div class="dis-alchol">13.5%</div>
 </div>
-<img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png">
+<img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/29-morey10.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?id=574637858760&spm=a2141.7631565.banner_18738727711.1" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574631886604" class="dis-tobuy">Click to buy</a>
 
 
 
@@ -62,22 +62,22 @@
 	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-grape.png">
 	
 <div class="dis-grapenum">
-83% <br>
-14% <br>
-3% 
+100%
+
 <br>
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Bordeaux</div>
+        Morey-Saint-Denis
+</div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-		Beef, Veal, Game (deer, venison), Poultry
+ rib steak, beef blade, Soft-centred cheeses 
 		<div class="dis-notes">
 	<h2>Notes</h2>
-A ruby color wine, with aromas of red fruits and vanilla. Smooth and sweet sensation, accompanied by vanilla ice cream and ripe red fruit. The body is tanned and soft. The aroma of French oak is slightly closed. Overall it is a traditional and feminine French wine. The taste is also food for entry-level wine lovers.
+ Masculine in character, as one expects from the Côte de Nuits, full and powerful in the mouth, red Morey-Saint-Denis is most at home with meats of equally strong flavours. Its tannins are more likely to bring out the best from a game bird (such as a pheasant) than a piece of veal, for example. Feathered game, braised or roasted, will succumb smoothly to its meaty texture, and its sustained tannins will continue to make their presence felt until the last succulent, musky mouthful.
 <br><br><br><br>
 
 
@@ -87,9 +87,8 @@ A ruby color wine, with aromas of red fruits and vanilla. Smooth and sweet sensa
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
-Cabernet Sauvignon<br>
-Cabernet Franc</div>
+Pinot Noir
+</div>
 </div>
 
 
