--- a/product/8.html
+++ b/product/8.html
@@ -47,14 +47,14 @@
 <div class="naviline"> </div>
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
-<div class="dis-price">￥99</div>
-<div class="dis-p-name">Bachevillain
+<div class="dis-price">￥256</div>
+<div class="dis-p-name">CuvéeFlamme Rosé
 
-<div class="dis-alchol">13.0%</div>
+<div class="dis-alchol">12.0%</div>
 </div>
-<img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png">
+<img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/8-flamme-rose.png">
 
-<a href="https://h5.m.taobao.com/awp/core/detail.htm?id=574637858760&spm=a2141.7631565.banner_18738727711.1" class="dis-tobuy">Click to buy</a>
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?spm=a2141.7631565.0.0&id=574552481927" class="dis-tobuy">Click to buy</a>
 
 
 
@@ -62,22 +62,24 @@
 	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-grape.png">
 	
 <div class="dis-grapenum">
-83% <br>
-14% <br>
-3% 
+60% <br>
+15% <br>
+25%
+
 <br>
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Bordeaux</div>
+        Crémant de Loire
+</div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-		Beef, Veal, Game (deer, venison), Poultry
+Beef and Venison 
 		<div class="dis-notes">
 	<h2>Notes</h2>
-A ruby color wine, with aromas of red fruits and vanilla. Smooth and sweet sensation, accompanied by vanilla ice cream and ripe red fruit. The body is tanned and soft. The aroma of French oak is slightly closed. Overall it is a traditional and feminine French wine. The taste is also food for entry-level wine lovers.
+A delicate pink colour and fine, smooth bubbles. Aromatics which open with floral and fresh fruit notes, including redcurrant. In the mouth, its fresh, light quality is revealed through citrus notes. The finish is forthright and direct, with citrus zest and elderberry aromas.
 <br><br><br><br>
 
 
@@ -87,9 +89,10 @@ A ruby color wine, with aromas of red fruits and vanilla. Smooth and sweet sensa
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
-Cabernet Sauvignon<br>
-Cabernet Franc</div>
+	Chardonnay<br>
+Cabernet Chenin Blanc<br>
+Cabernet Franc
+</div>
 </div>
 
 
