--- a/products.html
+++ b/products.html
@@ -141,6 +141,10 @@
 
 <div class="box">
 
+
+
+
+
 <a href="https://wangx733.github.io/jogano/product/1.html" class="items red">
 <div class="redwine"></div>
 <div class="pricee">¥ 99</div>
@@ -416,6 +420,58 @@
   <h3>Bordeaux</h3>
 </div>
 </a>
+
+<div id="filterContent">
+
+        <label>
+          <input type="checkbox" value="アプリケーション開発">
+          <span class="checkboxParts">アプリケーション開発</span></label>
+        <label>
+          <input type="checkbox" value="ソフトウェア開発">
+          <span class="checkboxParts">ソフトウェア開発</span></label>
+        <label>
+          <input type="checkbox" value="アナログ半導体(IC)設計開発および関連技術開発">
+          <span class="checkboxParts">アナログ半導体(IC)設計開発および関連技術開発</span></label>
+        <label>
+          <input type="checkbox" value="テスト/評価技術開発">
+          <span class="checkboxParts">テスト/評価技術開発</span></label>
+        <label>
+          <input type="checkbox" value="デバイス/プロセス技術開発">
+          <span class="checkboxParts">デバイス/プロセス技術開発</span></label>
+        <label>
+          <input type="checkbox" value="実装/パッケージ技術開発">
+          <span class="checkboxParts">実装/パッケージ技術開発</span></label>
+        <label>
+          <input type="checkbox" value="品質保証">
+          <span class="checkboxParts">品質保証</span></label>
+  
+  
+       <label>
+          <input type="checkbox" value="武蔵">
+          <span class="checkboxParts">武蔵</span></label>
+  
+         <label>
+          <input type="checkbox" value="takasaki">
+          <span class="checkboxParts">高崎</span></label>
+  
+<!-- /.filter-cond -->
+
+
+
+ <div data-filter-="アプリケーション開発" data-filter-location="武蔵">a</div>
+<div data-filter-key="アプリケーション開発" data-filter-location="武蔵">a</div>
+<div data-filter-key="ソフトウェア開発">b </div>
+<div data-filter-key="アナログ半導体(IC)設計開発および関連技術開発">c</div>
+<div data-filter-key="アプリケーション開発">a</div>
+<div data-filter-key="テスト/評価技術開発">e</div>
+<div data-filter-key="テスト/評価技術開発">e</div>
+<div data-filter-key="デバイス/プロセス技術開発" data-filter-location="武蔵">g</div>
+<div data-filter-key="実装/パッケージ技術開発">h</div>
+<div data-filter-key="品質保証" data-filter-location="takasaki">i</div>
+<div data-filter-key="品質保証" data-filter-location="takasaki">i</div>
+<!-- /#js-filter--></div>
+
+
 
 
 
