modified:   jogano.js

--- a/products.html
+++ b/products.html
@@ -456,7 +456,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/29.html" class="items" data-filter-key="red" data-filter-price="p350">
+<a href="https://wangx733.github.io/jogano/product/29.html" class="items" data-filter-key="red" data-filter-price="p0">
   <div class="redwine"></div>
 <div class="pricee">¥ 399</div>
 <img src="https://wangx733.github.io/jogano/1-products/29-morey10.png" class="image" >
@@ -468,7 +468,7 @@
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/.html" class="items" data-filter-key="red" data-filter-price="p350">
+<a href="https://wangx733.github.io/jogano/product/.html" class="items" data-filter-key="red">
   <div class="redwine"></div>
 <div class="pricee">¥ 595</div>
 <img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
@@ -481,7 +481,7 @@
 </a>
 
 
-<a href="https://wangx733.github.io/jogano/product/30.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/30.html" class="items" data-filter-key="red">
   <div class="redwine"></div>
 <div class="pricee">¥ 448</div>
 <img src="https://wangx733.github.io/jogano/1-products/30-asint-aubin.png" class="image" >
@@ -494,7 +494,32 @@
 </a>
 
 
-
+<div ng-app='angularDemo' ng-cloak>
+  <md-toolbar layout-padding>
+    <h2>Filtering with Angular Filters</h2>
+  </md-toolbar>
+  <div layout="row" ng-controller="angularController as ctrl">
+    <div flex="20" class="sidebar" layout-padding>
+      <div ng-repeat="filter in Filters">
+        <h3 class="sort">{{filter.name}}</h3>
+        <ul class="sortoptions">
+          <li ng-repeat="option in filter.options">
+            <input type="checkbox" ng-model="option.IsIncluded" ng-checked="option.IsIncluded"> {{option.value}}
+            <span>({{option.count}})</span>
+          </li>
+        </ul>
+      </div>
+      <md-button class="md-raised" ng-click="ctrl.toggleAll($event, false)">Uncheck All</md-button>
+      <br/>
+      <md-button class="md-raised" ng-click="ctrl.toggleAll($event, true)">Check All</md-button>
+   </div>
+    <div flex="50" layout="row">
+      <md-card flex ng-repeat="fruit in Fruits | dynamicFilter:Filters:this" class="product">
+        {{fruit.name}}
+      </md-card>
+    </div>
+  </div>
+</div>
 
 
 <div class="end-address">
