new file:   chinese/.DS_Store new file:   chinese/About.html new file:   chinese/events.html new file:   chinese/home.html new file:   chinese/product/.DS_Store new file:   chinese/product/1.html new file:   chinese/product/10.html new file:   chinese/product/11.html new file:   chinese/product/13.html new file:   chinese/product/14.html new file:   chinese/product/18.html new file:   chinese/product/19.html new file:   chinese/product/2.html new file:   chinese/product/20.html new file:   chinese/product/21.html new file:   chinese/product/22.html new file:   chinese/product/23.html new file:   chinese/product/24.html new file:   chinese/product/29.html new file:   chinese/product/30.html new file:   chinese/product/31.html new file:   chinese/product/4.html new file:   chinese/product/47.html new file:   chinese/product/7.html new file:   chinese/product/8.html new file:   chinese/product/9.html new file:   chinese/product/jogano.css new file:   chinese/products.html modified:   home.html modified:   jogano.js modified:   test.css modified:   test.html

--- a/chinese/home.html
+++ b/chinese/home.html
@@ -16,13 +16,13 @@
 
 	<div class="navigation">
 
-      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
+      <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> EVENTS
+      <a href="https://wangx733.github.io/jogano/events.html" class="events navi"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> ABOUT
+      <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
       <div class="gang lang">|</div>
@@ -31,13 +31,13 @@
 
 
 	<div class="navi2">
-		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> PRODUCTS
+		   <a href="https://wangx733.github.io/jogano/products.html" class="lang2 products navi2"> 商品介绍
       </a>
 
-      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> EVENTS
+      <a href="https://wangx733.github.io/jogano/events.html" class="lang2 events navi2"> 活动促销
       </a>
 
-      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> ABOUT
+      <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> 关于我们
       </a>
       <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
@@ -55,31 +55,31 @@
 <div class="home-box">
 
 <div class="parallax1">
-     <div class="slogen">Best Quality 
-  <br>Lowest Price
+     <div class="slogen">最好的质量
+  <br>最优惠的价格
       </div>
     </div>
     <div class="overlay1">
-      <h5><br> <br><br><br>We Visit</h5>
-      <p>We fly to France, go to all villages to see their soil, winery, equipments.</p>
+      <h5><br> <br><br><br>我们到访酒庄</h5>
+      <p>我们亲自去酒庄参观，检查设施，学习工艺，了解历史。</p>
     </div>
       <div class="parallax2"></div>
 
     <div class="relative overlay">
-      <h5 class="lead">We Taste</h5>
-      <p>We taste every single product to give a comprehensive valuation.</p>
+      <h5 class="lead">我们品尝货源</h5>
+      <p>我们亲自去酒庄，酒展品尝每一款产品，进行评估。</p>
     </div>
  <div class="parallax3"></div>
 
     <div class="relative overlay">
-      <h5>We Select</h5>
-      <p ">We only choose those high-quality wine with the lowest price.</p>
+      <h5>我们精心挑选</h5>
+      <p ">我们精心对比每一款红酒，挑选出性价比最高的来作为我们的商品。</p>
     </div>
  <div class="parallax4"></div>
 
     <div class="relative overlay">
       <h5>Deliver to your home</h5>
-      <p ">We have professional wine package, and diliver it from France.</p>
+      <p ">每一款酒，专业包装，法国空运直达送到你家。</p>
     </div>
  <div class="parallax5"></div>
 
@@ -87,15 +87,15 @@
 
 
 <div class="end-address">
-   NO.970 West Suzhou Road
+   西苏州路 970号
    <br>
- SHANGHAI CHINA
+ 上海，普陀区
  <br>
  200011
 </div>
 
 <div class="tele">
-  TEL: 51185305
+  电话: 51185305
 </div>
 <div class="contact">
   <a class="boicon" href="" ><img class="icon" src="https://wangx733.github.io/jogano/icon-wechat.png"></a>
