--- a/test.html
+++ b/test.html
@@ -60,22 +60,22 @@
 <div id="Container" class="container">
   <div class="fail-message"><span>No items were found matching the selected filters</span></div>
   
-  <div class="mix triangle white lrg"></div>
-  <div class="mix square white sm"></div>
-  <div class="mix circle green lrg"></div>
-  <div class="mix triangle blue lrg"></div>
-  <div class="mix square white lrg"></div>
-  <div class="mix circle blue sm"></div>
-  <div class="mix triangle green lrg"></div>
-  <div class="mix square blue lrg"></div>
-  <div class="mix circle white lrg"></div>
+  <div class="mix triangle white lrg">1</div>
+  <div class="mix square white sm">2</div>
+  <div class="mix circle green lrg">3</div>
+  <div class="mix triangle blue lrg">4</div>
+  <div class="mix square white lrg">5</div>
+  <div class="mix circle blue sm">6</div>
+  <div class="mix triangle green lrg">7</div>
+  <div class="mix square blue lrg">8</div>
+  <div class="mix circle white lrg">9</div>
   
   <div class="gap"></div>
   <div class="gap"></div>
   <div class="gap"></div>
   <div class="gap"></div>
 </div>
-    
+  
 
 
 
