--- a/chinese/product/1.html
+++ b/chinese/product/1.html
@@ -6,14 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
 <div class="navigationblock"></div>
 		<div class="hamburger">&#9776; </div>
 		<div class="cross">&#735;</div> 
+    
 <a href="https://wangx733.github.io/jogano/home.html">
 <img src="https://wangx733.github.io/jogano/jogano.png" class="logo" alt="">
 </a>
-
 	<div class="navigation">
 
       <a href="https://wangx733.github.io/jogano/products.html" class="products navi"> PRODUCTS
@@ -26,7 +25,7 @@
       </a>
       <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="https://wangx733.github.io/jogano/chinese/product.html" class="cn lang">中文</a>
+      <a href="" class="cn lang">中文</a>
 </div>
 
 
@@ -41,72 +40,57 @@
       </a>
       <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="https://wangx733.github.io/jogano/chinese/product.html" class="cn lang2">中文</a>
+      <a href="" class="cn lang2">中文</a>
       <div class="naviline2"></div>
 	</div>
 
 <div class="naviline"> </div>
+<a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
+
+<div class="dis-price">￥99</div>
+<div class="dis-p-name">Bachevillain
+
+<div class="dis-alchol">13.0%</div>
+</div>
+<img class="dis-photo" src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png">
+
+<a href="https://h5.m.taobao.com/awp/core/detail.htm?id=574637858760&spm=a2141.7631565.banner_18738727711.1" class="dis-tobuy">Click to buy</a>
+
+
+
+<div class="dis-grape">
+	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-grape.png">
+	
+<div class="dis-grapenum">
+83% <br>
+14% <br>
+3% 
+<br>
+	
+    <div class="dis-region-description">
+    	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
+        Bordeaux</div>
+<br>
+	
+	<div class="dis-pair-description">
+		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
+		Beef, Veal, Game (deer, venison), Poultry
+		<div class="dis-notes">
+	<h2>Notes</h2>
+A ruby color wine, with aromas of red fruits and vanilla. Smooth and sweet sensation, accompanied by vanilla ice cream and ripe red fruit. The body is tanned and soft. The aroma of French oak is slightly closed. Overall it is a traditional and feminine French wine. The taste is also food for entry-level wine lovers.
+<br><br><br><br>
 
 
 
 </div>
-
-
-<div class="home-box">
-
-<div class="parallax1">
-     <div class="slogen">Best Quality 
-  <br>Lowest Price
-      </div>
-    </div>
-    <div class="overlay1">
-      <h5><br> <br><br><br>We Visit</h5>
-      <p>We fly to France, go to all villages to see their soil, winery, equipments.</p>
-    </div>
-      <div class="parallax2"></div>
-
-    <div class="relative overlay">
-      <h5 class="lead">We Taste</h5>
-      <p>We taste every single product to give a comprehensive valuation.</p>
-    </div>
- <div class="parallax3"></div>
-
-    <div class="relative overlay">
-      <h5>We Select</h5>
-      <p ">We only choose those high-quality wine with the lowest price.</p>
-    </div>
- <div class="parallax4"></div>
-
-    <div class="relative overlay">
-      <h5>Deliver to your home</h5>
-      <p ">We have professional wine package, and diliver it from France.</p>
-    </div>
- <div class="parallax5"></div>
-
-
-
-
-<div class="end-address">
-   NO.970 West Suzhou Road
-   <br>
- SHANGHAI CHINA
- <br>
- 200011
+	</div>
 </div>
 
-<div class="tele">
-  TEL: 51185305
+<div class="dis-grapecompo">
+	Merlot<br>
+Cabernet Sauvignon<br>
+Cabernet Franc</div>
 </div>
-<div class="contact">
-  <a class="boicon" href="" ><img class="icon" src="https://wangx733.github.io/jogano/icon-wechat.png"></a>
-  <a class="boicon" href="http://m.tb.cn/h.3eUKWsB"> <img class="icon" src="https://wangx733.github.io/jogano/icon-feiyu.png"></a>
-</div>
-<div class=lastline>© 2018 Isabella Wang<br> </div>
-<div class="padding"></div>
-
-</div>
-
-
 
 
 
